# jTerm

./: pyproject.toml
src/jterm/: app.py  ascii.py  cli.py  commands.py  messages.py
src/jterm/core/: __init__.py  cell.py  screen.py
src/jterm/layout/: __init__.py  border.py  dimensions.py  direction.py  geometry.py  overflow.py  position.py  rect.py  size.py
src/jterm/logging/: __init__.py  console.py
src/jterm/widgets/: __init__.py  container.py  input.py  text.py  widget.py
