[project]
name = "jterm"
version = "0.0.0rc1"
description = "An experimental agent terminal"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[project.scripts]
jterm = "jterm.cli:main"
